--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
                             <img src="Assets/Images/Weather.png" class="float-left" alt="Planner" height="210"
                                 width="240"></img>
                             <div class="col">
-                                <h4>Project Name: Weather Dashboard</h4>
+                                <h4>Project Name: Work Day Scheduler</h4>
                                 <p> This assignment creates a simple calendar application that allows the user to save
                                     events for each
                                     hour of the day. This app will run in the browser and feature dynamically updated
