--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <!--Custom CSS-->
     <link rel="stylesheet" href="Assets/CSS/style.css" />
-
+    <!-- Favicon-->
+    <link rel="icon" type="image/jpg" src="Assets/Images/GoodLuck.jpg">
 </head>
 
 <body>
@@ -76,8 +77,7 @@
                             <p></p>
                             <br>
                             <img class="social-media" src="Assets/Images/resumeicon.png"></img>
-                            <a target="blank"
-                                href="https://docs.google.com/document/d/1fRKfox_KwE1ICDeVaApVjtGNlP4Y7pU2FE6GyefFkdo/edit?usp=sharing">My
+                            <a target="blank" href="file:///C:/Users/troyb/Downloads/TroyBerentsen_Resume.pdf">My
                                 Resume</a>
                             <br>
 
