--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,8 @@
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <!--Custom CSS-->
     <link rel="stylesheet" href="Assets/CSS/style.css" />
-
+    <!-- Favicon-->
+    <link rel="icon" type="image/png" src="Assets/Images/GoodLuck.jpg">
 
 </head>
 
