--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <p></p>
                             <br>
                             <img class="social-media" src="Assets/Images/resumeicon.png"></img>
-                            <a target="blank" href="file:///C:/Users/troyb/Downloads/TroyBerentsen_Resume.pdf">My
+                            <a target="blank" href="Assets/Images/TroyBerentsen_Resume.pdf">My
                                 Resume</a>
                             <br>
 
