--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <!--Custom CSS-->
     <link rel="stylesheet" href="Assets/CSS/style.css" />
     <!-- Favicon-->
-    <link rel="icon" type="image/png" src="Assets/Images/GoodLuck.jpg">
+    <link rel="icon" type="image/jpg" href="http://hailper.com/images/superhero.png">
 
 </head>
 
